# ptychotomo

./: .gitignore  .loglogin  .nfs00000000005277c600000046  .nfs0000000000cef8c500000968  .nfs00000000015534e600000149  .nfs00000000015534e60000046d  1  10017029.cobaltlog  10017029.error  10017029.output  LICENSE  MANIFEST.txt  README  README.md  README.rst  compile.sh  convert_png.py  data.tiff  data_1.tiff  data_3.tiff  data_4.tiff  datanew.tiff  find_residuals.py  gendata.err  gendata.py  interp.py  lcurvechip.py  lcurvecirc.py  nohup.out  objects.py  plot_residuals.py  prof  prof1  prof10  prof6  prof_cpu  ptycho-fig5.py  radonusfft.py  rec_volume.py  res  (+33 more)
beta/: beta-1.tiff  beta-10.tiff  beta-11.tiff  beta-12.tiff  beta-13.tiff  beta-2.tiff  beta-3.tiff  beta-4.tiff  beta-5.tiff  beta-6.tiff  beta-7.tiff  beta-8.tiff  beta-9.tiff  beta.tiff
build_paper/: build_fig1.py  build_fig2.py  build_fig3.py  build_fig4.py  build_fig5.py  build_fig6.py  find_residuals.py  lagrangians.txt  plot_residuals.py  runp100.sh
ceof/: coef.tiff  h.tiff  h2.tiff  h3.tiff  psi.tiff  psi2.tiff
data/: PHANTOM-BETA  PHANTOM-DELTA  beta128.tiff  delta128.tiff  lego-imag.tiff  lego-real.tiff  probes_amp.tiff
data_noise/: data_2142423.tiff  data_215296.tiff  data_21921.tiff  data_2318.tiff  data_270.tiff  data_858211.tiff  data_86478.tiff
delta/: delta-1.tiff  delta-10.tiff  delta-11.tiff  delta-12.tiff  delta-13.tiff  delta-2.tiff  delta-3.tiff  delta-4.tiff  delta-5.tiff  delta-6.tiff  delta-7.tiff  delta-8.tiff  delta-9.tiff  delta.tiff
envs/: python-3.6.yaml
lagr/: lagrreg2e-07noiseTruemaxint0.01prbshift8ntheta384poisson441.npy  lagrreg2e-07noiseTruemaxint0.1prbshift8ntheta384gaussian441.npy  lagrreg2e-07noiseTruemaxint0.1prbshift8ntheta384poisson441.npy  lagrreg4e-07noiseTruemaxint0.1prbshift8ntheta384gaussian441.npy  lagrreg4e-07noiseTruemaxint0.1prbshift8ntheta384poisson441.npy
lagrfig/: lagrreg1e-07noiseFalsemaxint3prbshift8ntheta384gaussian44500.npy  lagrreg1e-07noiseFalsemaxint3prbshift8ntheta384poisson44500.npy  lagrreg1e-11noiseFalsemaxint3prbshift8ntheta384gaussian44500.npy  lagrreg1e-11noiseFalsemaxint3prbshift8ntheta384poisson44500.npy  lagrreg2e-07noiseFalsemaxint3prbshift8ntheta384gaussian44500.npy  lagrreg2e-07noiseFalsemaxint3prbshift8ntheta384poisson44500.npy  lagrreg5e-07noiseFalsemaxint3prbshift8ntheta384poisson44500.npy
lego/: admm.py  test.py  theta.npy
paraview/: .loglogin  beta2.pvsm  betas2.pvsm  data.pvsm  data64.pvsm  datas.pvsm  datas64.pvsm  delta2.pvsm  delta3.pvsm  deltas2.pvsm  deltas3.pvsm  freq.pvsm  mod_delta.py  save_render_data.py  save_render_data64.py  save_render_rec.py  tmp.tiff  tmp_beta.tiff  tmp_data.tiff  tmp_delta.tiff
psi/: psi-1.tiff  psi-10.tiff  psi-11.tiff  psi-12.tiff  psi-13.tiff  psi-14.tiff  psi-15.tiff  psi-16.tiff  psi-17.tiff  psi-2.tiff  psi-3.tiff  psi-4.tiff  psi-5.tiff  psi-6.tiff  psi-7.tiff  psi-8.tiff  psi-9.tiff  psi.tiff
radonusfft.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
recipe/: conda_build_config.yaml  meta.yaml
res/: res_1_1_200.npy  res_1_200_200.npy  res_200_1_200.npy  res_4_4_200.npy  res_500_500_200.npy  res_500_500_40.npy  res_noise_1_1_200.npy  res_noise_1_200_200.npy  res_noise_200_1_200.npy  res_noise_4_4_200.npy  res_noise_500_500_200.npy  res_noise_500_500_40.npy
res_varyrho/: res_1_1_200.npy  res_1_200_200.npy  res_200_1_200.npy  res_4_4_200.npy  res_500_500_200.npy  res_500_500_40.npy  res_noise_1_1_200.npy  res_noise_1_200_200.npy  res_noise_200_1_200.npy  res_noise_4_4_200.npy  res_noise_500_500_200.npy  res_noise_500_500_40.npy
src/: kernels.cuh  radonusfft.cu  radonusfft.cuh  radonusfft.i  radonusfft.py  radonusfft_wrap.cpp
src/cuda/: CMakeLists.txt  deform.cu  deform.i  filter.cu  kernels_ptycho.cu  kernels_tomo.cu  ptychofft.cu  ptychofft.i  radonusfft.cu  radonusfft.i  shift.cu
tests/: mprofile.sh  test_admm.py  test_admm_lego.py  test_deform.py  test_deform_grad.py  test_perf.py  test_ptycho.py  test_ptycho_cg.py  test_ptycho_grad.py  test_stack_align.py  test_tomo.py  test_tomo_cg.py  test_tomo_grad.py  test_tomoalign.py
tmp_scripts/: convert_png.py
tmpscripts/: convert_png.py  crop.py  gen_data.py  gendata.py  lcurvecirc.py  modbg.py  plot_data.py  ptycho-fig5.py  read_wires_data.py  rec_volume.py  regrid.py  run.sh  run_gendata.sh  (+6 more)
(+647 files in other folders)
